# TsenivianEscape

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exercises.sln  vcpkg.json
.github/workflows/: c-cpp.yml
data/: items.json  level1.json  level1.txt  level2.json  level2.txt  level2b.json  level2b.txt  level3.json  level3.txt  npcs.json
exercises/: Container.cpp  Container.h  Creature.cpp  Creature.h  Directions.h  GameObject.cpp  GameObject.h  GameSession.cpp  GameSession.h  Input.cpp  Input.h  Item.h  Layer.h  Map.cpp  Map.h  Player.cpp  Player.h  Point.h  ScreenUtils.cpp  Settings.h  Wall.h  a.out  exercises.vcxproj  exercises.vcxproj.filters  game  main.cpp
saves/: antheia.json  antheia2.json  savetest.json  savetest2.json  savetest3.json
src/: AISettings.h  Settings.h  main.cpp
src/core/: Combat.cpp  Combat.h  GameSession.cpp  GameSession.h  GameState.h  GameStateManager.cpp  GameStateManager.h  MenuSystem.cpp  MenuSystems.h  SaveManager.cpp  SaveManager.h  UserInterface.cpp  UserInterface.h
src/dataLoading/: parseJson.cpp  parseJson.h
src/gameObjects/: GameObject.cpp  GameObject.h  Item.cpp  Item.h
src/gameObjects/creatures/: Creature.cpp  Creature.h  NonPlayableCharacter.cpp  NonPlayableCharacter.h  Player.cpp  Player.h  Stats.h
src/gameObjects/items/: Armor.h  Equipment.h  InstantUsableItem.cpp  InstantUsableItem.h  Item.cpp  Item.h  UsableItem.h  Weapon.cpp  Weapon.h
src/gameObjects/terrain/: Container.cpp  Container.h  MapChanger.cpp  MapChanger.h  RestingPlace.cpp  RestingPlace.h  WalkOnObject.h  Wall.h
src/input/: Input.cpp  Input.h
src/map/: Map.cpp  Map.h  Point.h
src/scripts/: Action.h  MeleeAttack.cpp  MeleeAttack.h  NpcCombatAI.cpp  NpcCombatAI.h  RangedAttack.cpp  RangedAttack.h  Shove.cpp  Shove.h
src/scripts/actions/: Action.cpp  Action.h  BasicAttack.cpp  BasicAttack.h  CubeAoe.cpp  CubeAoe.h  Dodge.cpp  Dodge.h  Haste.cpp  Haste.h  HealingAttack.cpp  HealingAttack.h  MeleeAttack.cpp  MeleeAttack.h  RangedAttack.cpp  RangedAttack.h  Shove.cpp  Shove.h  ShovingAttack.cpp  ShovingAttack.h  StatModifier.cpp  StatModifier.h
src/scripts/passives/: CompositePassiveEffect.cpp  CompositePassiveEffect.h  PassiveEffect.cpp  PassiveEffect.h
src/skills/: SkillTree.cpp  SkillTree.h
src/utils/: GeometryUtils.cpp  GeometryUtils.h  Interface.cpp  Interface.h  QueueClass.h  Random.h  ScreenUtils.cpp  ScreenUtils.h
tests/: testCombat.cpp  testCreature.cpp
tests/fixtures/: fixtures.cpp  fixtures.h
